<resources>
    <string name="app_name">Droid Cafe</string>
    <string name="choose_a_dessert">Choose a Dessert</string>
    <string name="droid_dessert">Droid Dessert</string>
    <string name="donuts">Donuts are glazed and sprinkled with candy.</string>
    <string name="icecreams">Ice cream sandwiches have chocolate wafers and vanilla filling</string>
    <string name="froyos">FroYo is premium self-serve frozen yogurt.</string>
    <string name="donut_order_message">You ordered a donut.</string>
    <string name="ice_cream_order_message">You ordered an ice cream sandwich.</string>
    <string name="froyo_order_message">You ordered a FroYo.</string>
    <string name="choose_a_delivery_method">Choose a delivery method</string>
    <string name="pick_up">Pick up</string>
    <string name="next_day_ground_delivery">Next day ground delivery</string>
    <string name="same_day_messenger_service">Same day messenger service</string>
    <string name="nothing_selected">Nothing selected</string>
    <string name="call_delivery_service">Call Delivery Service</string>
    <string name="order">Order</string>
    <string name="status">Status</string>
    <string name="favourites">Favourites</string>
    <string name="contact">Contact</string>
    <string name="action_order_message">You selected Order</string>
    <string name="action_status_message">You selected Status</string>
    <string name="action_favorites_message">You selected Favorites</string>
    <string name="action_contact_message">You selected Contact</string>
</resources>
