<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/order_menu_item"
        android:orderInCategory="10"
        android:title="@string/order"
        android:icon="@drawable/ic_order"
        app:showAsAction="always" />
    <item
        android:id="@+id/status_menu_item"
        android:orderInCategory="20"
        android:icon="@drawable/ic_info"
        app:showAsAction="always"
        android:title="@string/status" />
    <item
        android:id="@+id/fav_menu_item"
        android:orderInCategory="30"
        android:icon="@drawable/ic_status"
        app:showAsAction="ifRoom"
        android:title="@string/favourites" />
    <item
        android:id="@+id/contact_menu_item"
        android:orderInCategory="40"
        app:showAsAction="never"
        android:title="@string/contact" />
</menu>